Added animate.css and put in pulse animation for picture

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>About Me</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="animate.css">
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
     </head>
@@ -17,7 +18,7 @@
             </header>
             <section class="hero">
                 <div class="content">
-                    <img class="my-picture" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAb3AAAAJGIwOTE0NTU4LTExMTMtNGM1My1iZTAwLTMzODM1YjVhMWUyZg.jpg" alt="This is a picture of me">
+                    <img class="my-picture animated pulse" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAb3AAAAJGIwOTE0NTU4LTExMTMtNGM1My1iZTAwLTMzODM1YjVhMWUyZg.jpg" alt="This is a picture of me">
                     <p class="my-name my-info">Sullivan Valaer</p>
                 </div>
             </section>
